2010-07-17  Shyam Karanatt  <shyam@swathanthran.in>  (tiny change)

	* image-mode.el (image-display-size): New function.
	(image-forward-hscroll, image-next-line, image-eol, image-eob)
	(image-mode-fit-frame): Use it (Bug#6639).

2010-07-17  Chong Yidong  <cyd@stupidchicken.com>

	* dired.el (dired-buffers-for-dir): Handle list values of
	dired-directory (Bug#6636).

2010-07-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* vc.el (vc-coding-system-inherit-eol): New defvar.
	(vc-coding-system-for-diff): Use it to decide whether to inherit
	from the file the EOL format for reading the diffs of that file.
	(Bug#4451)

2010-07-16  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmailmm.el (rmail-mime-save): Make the temp buffer
	unibyte, so compressed attachments are not compressed again.

2010-07-14  Jan Djärv  <jan.h.d@swipnet.se>

	* xt-mouse.el (xterm-mouse-event-read): Fix for characters > 127
	now that unicode is used (Bug#6594).

2010-07-14  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (push-mark-command): Set the selection if
	select-active-regions is non-nil.

2010-07-10  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-week-end-day): New function.
	* calendar/cal-tex.el (cal-tex-cursor-month): Remove unused vars.
	Respect calendar-week-start-day.  (Bug#6606)
	(cal-tex-insert-day-names, cal-tex-insert-blank-days)
	(cal-tex-insert-blank-days-at-end): Respect calendar-week-start-day.
	(cal-tex-first-blank-p, cal-tex-last-blank-p): Simplify, and
	respect calendar-week-start-day.

2010-07-10  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (use-region-p): Doc fix (Bug#6607).

2010-07-07  Christoph Scholtes  <cschol2112@gmail.com>

	* progmodes/python.el (python-font-lock-keywords): Add Python 2.7
	builtins (BufferError, BytesWarning, WindowsError; callables
	bin, bytearray, bytes, format, memoryview, next, print; __package__).

2010-07-07  Glenn Morris  <rgm@gnu.org>

	* play/zone.el (zone-fall-through-ws): Fix next-line ->
	forward-line fallout.
